# Multi-Trading-Agents

./: .gitignore  cli.py  graph_config.json  main.py  pyproject.toml  run_auto_trader.py  test.py  test2.py  test_debate.py  test_trader.py
cli/: __init__.py  app.py  base.py  events.py  loader.py  manager.py  screens.py  widgets.py
cli/components/: __init__.py  report_toggle.py
cli/screens/: __init__.py  debate_detail_screen.py  main_screen.py  stock_chart_screen.py  styles.py  trade_progress_screen.py  utils.py
cli/widgets/: __init__.py  activity_widget.py  portfolio_widget.py
graphs/: __init__.py  debate.py  test.py
graphs/analyst/: __init__.py  agent.py  graph.py  node.py  schema.py
graphs/debate/: __init__.py  agents.py  factory.py  nodes.py
graphs/main/: __init__.py  graph.py  node.py
graphs/rank/: __init__.py  agent.py  graph.py  node.py  schema.py
graphs/trader/: agents.py  factory.py  nodes.py  trader.py
logs/research_dialogs/GOOGL_2025-03-28/: bear_round_2_20251106_141053.json  bear_round_2_20251107_140214.json  bear_round_4_20251106_141057.json  bear_round_4_20251107_140218.json  bear_round_6_20251106_141100.json  bear_round_8_20251106_141105.json  (+8 more)
modules/: __init__.py  kis_trader.py
modules/agent/: __init__.py  agent.py
modules/agents/: __init__.py  agent.py
modules/context/: __init__.py  context.py
modules/debate/: agents.py  nodes.py  paths.py  schemas.py
modules/graph/: __init__.py  graph.py  node.py
modules/llm/: __init__.py  client.py
modules/utils/: __init__.py  constant.py  fetch.py  stock_api.py  tools.py
(+8 files in other folders)
