[project]
name = "multi-trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.47.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "textual>=6.6.0",
    "textual-plotext>=1.0.1",
    "yfinance>=0.2.66",
]
